@@ -4,14 +4,15 @@
  * You may not use or redistribute this software or any associated files without permission.
  * The above copyright notice shall be included in all copies of this software.
  */
-
 package de.dasbabypixel.prefixplugin;
+
+import java.lang.reflect.InvocationTargetException;
 
 class ScoreboardManager {
 
-	boolean failed = false;
+	boolean failed;
 	FailureCause cause;
-	
+
 	ScoreboardManager(Main main) {
 		failed = !enableVersion(main);
 	}
@@ -20,17 +21,20 @@ class ScoreboardManager {
 	public synchronized boolean enableVersion(Main main) {
 		Class<? extends IScoreboardManager> clazz = null;
 		try {
-			clazz = (Class<? extends IScoreboardManager>) Class
-					.forName(IScoreboardManager.class.getPackage().getName() + ".ScoreboardManager_" + Main.version);
+			clazz = (Class<? extends IScoreboardManager>) Class.forName(
+					IScoreboardManager.class.getPackage().getName() + ".ScoreboardManager_"
+							+ Main.version);
 		} catch (ClassNotFoundException e) {
 			cause = FailureCause.CLASS_NOT_FOUND_EXCEPTION;
 		}
 		if (clazz != null) {
 			try {
-				main.setScoreboardManager(clazz.newInstance());
-				main.getServer().getPluginManager().registerEvents(main.getScoreboardManager(), main);
-			} catch (InstantiationException e) {
-			} catch (IllegalAccessException e) {
+				main.setScoreboardManager(clazz.getConstructor().newInstance());
+				main.getServer().getPluginManager()
+						.registerEvents(main.getScoreboardManager(), main);
+			} catch (InstantiationException | IllegalAccessException ignored) {
+			} catch (InvocationTargetException | NoSuchMethodException e) {
+				throw new RuntimeException(e);
 			}
 
 			if (main.getScoreboardManager() == null) {
